Added eleven and twelve branch

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="style.css">   
 </head>
 <nav id="navbar">
-
-
-
-
+    <header>JS documentation</header>
+        <ul>
+            <li> <a class= "nav-link"href="introduction"> introduction </a> </li>
+            <li> <a class= "nav-link"href="what you should already know"> what you should already know </a> </li>
+            <li> <a class= "nav-link"href="JavaScript and Java"> JavaScript and Java </a> </li>
+            <li> <a class= "nav-link"href="Hello World"> Hello World </a> </li>
+            <li> <a class= "nav-link"href="Variables"> Variables </a> </li>
+        </ul>
 </nav>
-
-
 
 
 
